tests/NormalTests/paczka2/big_fuzzy/98547626.err
Error in line 4: 829tFH S880 40,7
Error in line 12: WTgQX1y3Cjb A319 40,2
Error in line 15: kJsMAsgLX1u S451 78,82
Error in line 18: 5IC S880 -2,8
Error in line 19: kJsMAsgLX1u ST51 87,T
Error in line 11: S880 A319 52,4
Error in line 25: TiVd S880 94,5
Error in line 3: kJsMAsgLX1u S451 25,0
Error in line 40: kJsMAsgLX1u A319 36,0
Error in line 41: kJsMAsgLX1u S451 96,5
Error in line 45: S880 S451 69,1
Error in line 57: wZ8ueMTBfl A319 12,7
Error in line 68: S880 S451 0,1
Error in line 86: TiVd S451 98,1
Error in line 94: wZ8ueMTBfl A319 20,1
Error in line 93: TiVd A319 51,9
Error in line 98: wZ8ueMTBfl S880 72,5
Error in line 116: kJsMAsgLX1u S451 28,0
Error in line 119: S880 A319 34,2
Error in line 131: 5IC A10 72,5
Error in line 132: WTgQX1y3Cjb A319 92,1
Error in line 146: TiVd A319 30,5
Error in line 150: wZ8ueMTBfl S451 1,5
Error in line 152: kJsMAsgLX1u A319 58,4
Error in line 159: 829tFH S451 121,8
Error in line 178: wZ8ueMTBfl A319 49,1
Error in line 183: WTgQX1y3Cjb A10 4A,8
Error in line 179: WTgQX1y3Cjb A319 2,4
Error in line 184: WTgQX1y3Cjb A10 1150,1
Error in line 187: WTgQX1y3Cjb S880 94,9
Error in line 196: 5IC S880 42,7
Error in line 206: TiVd S880 6,2
Error in line 205: wZ8ueMTBfl A10 75,2
Error in line 188: S880 A319 337,7
Error in line 219: WTgQX1y3Cjb A10 2,6
Error in line 225: WTgQX1y3Cjb S451 34,4
Error in line 210: wZ8ueMTBfl S451 18,4
Error in line 229: wZ8ueMTBfl A319 32,4
Error in line 231: wZ8ueMTBfl S451 21,6
Error in line 243: 5IC S880 2,7
Error in line 236: TiVd A10 12,4
Error in line 246: TiVd A319 81,3
